<resources>
    <string name="app_name">MySmartUSC</string>
    <string name="login_button_text">Login to Gmail</string>
    <string-array name="keywords_modification_list_choices">
        <item>Title Mark As Read List</item>
        <item>Title Important List</item>
        <item>Title Star List</item>
        <item>Content Mark As Read List</item>
        <item>Content Important List</item>
        <item>Content Star List</item>
        <item>Important Email Addresses List</item>
    </string-array>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="server_client_id">75321107364-44fciaa6e308bsn6kur5nkest9c51ra9.apps.googleusercontent.com</string>
    <string name="client_secret">Vv6yRIda4kgZxCOmyBhb4-YZ</string>

    <!-- notification system -->
    <string name="channel_name">MySmartUSC Notification Channel</string>
    <string name="channel_description">Push important app message to users</string>
    <string name="channel_id">Important Mails</string>

    <!-- newly defined ids -->
    <item name="new_keyword_edit_text" type="id" />
    <string name="title_activity_important_mails">important_mails</string>
    <string name="title_activity_receive_word">ReceiveWordActivity</string>
    <string name="checkbox_TitleRead">Title Mark As Read</string>
    <string name="checkbox_TitleImportant">Title Importent</string>
    <string name="checkbox_ContentRead">Content Mark As Read</string>
    <string name="checkbox_ContentImportant">Content Important</string>
    <string name="checkbox_ContentStar">Content star</string>
    <string name="checkbox_ImportentEmailAddress">Important Email Addresses</string>
    <string name="button_confirm">Confirm</string>
    <!--<string name="title_activity_receive_text">MySmartUSC</string>-->

</resources>
