<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <CheckBox android:id="@+id/TitleRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_TitleRead"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/TitleImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_TitleImportant"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/TitleStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_TitleImportant"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/ContentRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ContentRead"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/ContentImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ContentImportant"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/ContentStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ContentStar"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/ImportentEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ImportentEmailAddress"
        android:onClick="onCheckboxClicked"/>
    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:onClick="confirm" />
</LinearLayout>